--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -173,9 +173,13 @@
       "uitid_v2": "UITID v2",
       "test": "Test",
       "live": "Live",
+      "in_progress": "Je aanvraag tot activatie is in behandeling.",
       "link": "here",
       "uitid_alert": "Voor deze integratie zijn nog geen UiTIDv2 credentials aangevraagd.",
-      "action_uitid": "UiTIDv2 credentials aanvragen"
+      "action_uitid": "UiTIDv2 credentials aanvragen",
+      "client_id": "Client id",
+      "client_secret": "Client secret",
+      "info": "Deze credentials blijven nog 3 maanden geldig en worden definitief verwijdered op {{datum + 3 maanden}}"
     },
     "integration_settings": {
       "title": "Instellingen",
