--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -134,7 +134,9 @@
       "price": "Totaalbedrag",
       "contact": "E-mail boekhouding",
       "contact_description": "Dit adres ontvangt de betalinginstructies, -herinneringen en de factuur.",
-      "coupon": "Coupon"
+      "coupon": "Coupon",
+      "invalid_coupon": "Invalid coupon",
+      "alrady_used_coupon": "Coupon is already used"
     },
     "documentation": {
       "title": "Documentatie",
