--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -88,7 +88,7 @@
       },
       "basic": {
         "title": "Basic",
-        "price": "{{currency}} {{price}} / year"
+        "price": "{{price}} / year"
       },
       "plus": {
         "title": "Plus",
