--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -88,7 +88,7 @@
       },
       "basic": {
         "title": "Basic",
-        "price": "{{currency}} {{price}} / jaar"
+        "price": "{{price}} / jaar"
       },
       "plus": {
         "title": "Plus",
