--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -84,19 +84,33 @@
     "pricing": {
       "free": {
         "title": "Free",
-        "price": "Free"
+        "price": "Free",
+        "description": {
+          "entry-api": "You are responsible for building the integration yourself, with support from our documentation."
+        }
       },
       "basic": {
         "title": "Basic",
-        "price": "{{price}} / year"
+        "price": "{{price}} / year",
+        "description": {
+          "search-api": "You handle the setup yourself while gaining access to all the functionalities of the Search API.",
+          "widgets": "You handle the setup yourself while gaining access to all the functionalities of the Widgets."
+        }
       },
       "plus": {
         "title": "Plus",
-        "price": "first year: € 600, thereafter: € 280 / year"
+        "price": "first year: € 600, thereafter: € 280 / year",
+        "description": {
+          "widgets": "After an intake meeting, publiq will configure your widget and seamlessly integrate it into your website."
+        }
       },
       "custom": {
         "title": "Custom",
-        "price": "custom proposal"
+        "price": "custom proposal",
+        "description": {
+          "search-api": "We will contact you for a tailored solution that meets your use case and target audience.",
+          "widgets": "We will contact you for a tailored solution that meets your use case and target audience."
+        }
       }
     }
   },
