--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -150,7 +150,7 @@
       "contact_description": "Dit adres ontvangt de betalinginstructies, -herinneringen en de factuur.",
       "coupon": "Coupon",
       "invalid_coupon": "Invalid coupon",
-      "alrady_used_coupon": "Coupon is already used"
+      "already_used_coupon": "Coupon is already used"
     },
     "documentation": {
       "title": "Documentatie",
