Update widget plus plan description

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -102,7 +102,7 @@
         "title": "Plus",
         "price": "first year: € 600, thereafter: € 280 / year",
         "description": {
-          "widgets": "After an intake meeting, publiq will configure your widget and seamlessly integrate it into your website."
+          "widgets": "After an intake interview, publiq takes care of the configuration of your widget."
         }
       },
       "custom": {
