--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -102,7 +102,7 @@
         "title": "Plus",
         "price": "eerste jaar: € 600 nadien: € 280 / jaar",
         "description": {
-          "widgets": "Na een intakegesprek zorgt publiq voor de configuratie van je widget en de naadloze integratie ervan in je website."
+          "widgets": "Na een intakegesprek zorgt publiq voor de configuratie & integratie van je widget."
         }
       },
       "custom": {
