--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -33,7 +33,7 @@
         "features": [
           "JSON-standaard",
           "Award-winning API",
-          "Activatie op live-omgeving op aanvraag"
+          "Activatie live-omgeving op aanvraag"
         ]
       },
       "search_api": {
@@ -273,10 +273,10 @@
       "action_url": "#"
     },
     "release_notes": {
-      "title": "Relase notes",
+      "title": "Release notes",
       "description": "Een overzicht van alle nieuwe mogelijkheden, technische aanpassingen en verbeteringen binnen het publiq platform.",
       "img_url": "#",
-      "action_title": "Naar de relase notes",
+      "action_title": "Naar de release notes",
       "action_url": "#"
     },
     "support_via_slack": {
