Improve copy newsletter

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -327,7 +327,7 @@
     },
     "newsletter": {
       "title": "Blijf op de hoogte",
-      "description": "Schrijf je in op onze nieuwsbrief en blijf op de hoogte van het laatste publiq-nieuws.",
+      "description": "Schrijf je in op onze nieuwsbrief en krijg als eerste updates over het publiq platform.",
       "action": "Inschrijven"
     }
   }
