--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -257,7 +257,7 @@
       "description": "Alle iconen, logo's en kleuren voor jou op een rijtje gezet. Een must wanneer je een UiT-agenda bouwt.",
       "img_url": "#",
       "action_title": "Naar de stijlgids",
-      "action_url": "#"
+      "action_url": "https://www.publiq.be/nl/projecten/publiq-platform/stijlgids"
     },
     "statuspage": {
       "title": "Statuspagina",
@@ -271,14 +271,14 @@
       "description": "Neem een kijkje in onze plannen en deel jouw briljante ideeën om onze producten nog beter te maken.",
       "img_url": "#",
       "action_title": "Naar de roadmap",
-      "action_url": "#"
+      "action_url": "https://trello.com/b/Qa6OxKIC/publiq-platform"
     },
     "release_notes": {
       "title": "Release notes",
       "description": "Een overzicht van alle nieuwe mogelijkheden, technische aanpassingen en verbeteringen binnen het publiq platform.",
       "img_url": "#",
       "action_title": "Naar de release notes",
-      "action_url": "#"
+      "action_url": "https://docs.publiq.be/docs/release-notes/introduction"
     },
     "support_via_slack": {
       "title": "Support via slack",
@@ -314,16 +314,22 @@
       "part2": "1080 Brussel"
     },
     "links": {
-      "what": "Wat?",
       "opportunities": "Mogelijkheden",
+      "opportunities_link": "https://www.publiq.be/nl/projecten/publiq-platform",
       "price": "Prijs",
-      "start": "Aan de slag",
+      "price_link": "https://www.publiq.be/nl/projecten/publiq-platform/prijzen",
       "terms_of_use": "Gebruiksvoorwaarden",
+      "terms_of_use_link": "https://www.publiq.be/nl/gebruikersvoorwaarden-publiq-platform",
       "privacy": "Privacyverklaring",
+      "privacy_link": "https://www.publiq.be/nl/privacy",
       "cookie": "Cookieverklaring",
+      "cookie_link": "https://www.publiq.be/nl/cookies",
       "documentation": "Documentatie",
+      "documentiton_link": "https://docs.publiq.be",
       "status_page": "Statuspagina",
+      "status_page_link": "https://status.publiq.be/",
       "help": "Helpcentrum",
+      "help_link": "https://helpdesk.publiq.be/hc/nl",
       "slack": "Support via slack"
     },
     "newsletter": {
