--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -364,7 +364,7 @@
   },
   "error": {
     "title": "Oops! Something went Wrong.",
-    "description": "We're sorry, but there seems to be a problem on our end. Our team has been notified, and we're working to fix this as quickly as possible. Please try refreshing the page in a few minutes. If the problem persists, feel free to contact us at technical-support@publiq.be for assistance. We appreciate your understanding and patience.",
+    "description": "We're sorry, but there seems to be a problem on our end. Our team has been notified, and we're working to fix this as quickly as possible. Please try refreshing the page in a few minutes. If the problem persists, feel free to contact us at <0>technical-support@publiq.be</0> for assistance. We appreciate your understanding and patience.",
     "back": "Back"
   }
 }
