--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -227,7 +227,7 @@
         "title": "Tabblad verlaten?",
         "question": "Wijzigingen die je hebt aangebracht worden niet opgeslagen."
       },
-      "error": "Er is een fout opgetreden bij het indienen van het formulier. Controleer uw invoer en probeer het opnieuw.",
+      "error": "Je wijzigingen konden niet worden opgeslagen. Controleer je invoer en probeer opnieuw.",
       "success": "De wijzigingen zijn succesvol opgeslagen."
     },
     "delete_integration": {
