--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -151,7 +151,8 @@
       "contact_description": "Dit adres ontvangt de betalinginstructies, -herinneringen en de factuur.",
       "coupon": "Coupon",
       "invalid_coupon": "Invalid coupon",
-      "alrady_used_coupon": "Coupon is already used"
+      "alrady_used_coupon": "Coupon is already used",
+      "total_price": "Totaal"
     },
     "documentation": {
       "title": "Documentation",
