--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -150,7 +150,7 @@
       "contact": "E-mail boekhouding",
       "contact_description": "Dit adres ontvangt de betalinginstructies, -herinneringen en de factuur.",
       "coupon": "Coupon",
-      "total_price": "Totaal"
+      "total_price": "Total"
     },
     "documentation": {
       "title": "Documentation",
