Show coupon info on detail page

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -198,7 +198,8 @@
         "postcode": "Postcode",
         "city": "City"
       },
-      "vat": "VAT or company number"
+      "vat": "VAT or company number",
+      "coupon_used": "A coupon of {{price}} has been applied"
     },
     "credentials": {
       "title": "Credentials",
