--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -199,7 +199,7 @@
         "city": "Gemeente"
       },
       "vat": "BTW of ondernemingsnummer",
-      "coupon_used": "Een coupon is toegepast van {{price}}"
+      "coupon_used": "Een coupon van {{price}} is toegepast"
     },
     "credentials": {
       "title": "Credentials",
