--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -262,7 +262,7 @@
     },
     "styleguide": {
       "title": "Stijlgids",
-      "description": "Alle iconen, logo's en kleuren voor jou op een rijtje gezet. Een must wanneer je een UiT-agenda bouwt.",
+      "description": "Alle beeldmerken, iconen en kleuren voor jou op een rijtje gezet. Een must wanneer je een UiT-agenda bouwt.",
       "img_url": "#",
       "action_title": "Naar de stijlgids",
       "action_url": "https://www.publiq.be/nl/projecten/publiq-platform/stijlgids"
