--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -373,8 +373,15 @@
     }
   },
   "error": {
-    "title": "Oops! Something went Wrong.",
-    "description": "We're sorry, but there seems to be a problem on our end. Our team has been notified, and we're working to fix this as quickly as possible. Please try refreshing the page in a few minutes. If the problem persists, feel free to contact us at <0>technical-support@publiq.be</0> for assistance. We appreciate your understanding and patience.",
-    "back": "Back"
+    "500": {
+      "title": "Oops! Something went Wrong.",
+      "description": "We're sorry, but there seems to be a problem on our end. Our team has been notified, and we're working to fix this as quickly as possible. Please try refreshing the page in a few minutes. If the problem persists, feel free to contact us at <0>technical-support@publiq.be</0> for assistance. We appreciate your understanding and patience.",
+      "back": "Back"
+    },
+    "404": {
+      "title": "Sorry, this page does not exist (anymore).",
+      "description": "You clicked on a link to a page that we unfortunately cannot find on publiq platform.",
+      "back": "Go back to the homepage"
+    }
   }
 }
