Improve copy about uitid v1 and v2

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -213,8 +213,8 @@
       "live": "Live",
       "in_progress": "Je aanvraag tot activatie is in behandeling.",
       "link": "here",
-      "uitid_alert": "Voor deze integratie zijn nog geen UiTIDv2 credentials aangevraagd.",
-      "action_uitid": "UiTIDv2 credentials aanvragen",
+      "uitid_alert": "Voor deze integratie zijn nog geen Client credentials aangevraagd.",
+      "action_uitid": "Client credentials aanvragen",
       "client_id": "Client id",
       "client_secret": "Client secret",
       "api_key": "API Key",
