Improve EN copy about terms of use

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -108,7 +108,7 @@
       "last_name": "Last name",
       "email": "Email address"
     },
-    "agree": "I agree to the <1>terms of use</1> and the <2>privacy policy</2>",
+    "agree": "I agree to the <1>terms of use (Dutch only)</1> and the <2>privacy policy</2>",
     "terms_of_use_link": "https://www.publiq.be/en/gebruiksvoorwaarden",
     "privacy_link": "https://www.publiq.be/en/privacy",
     "coupon": "I have a coupon",
