Clarify that style guide is only available in Dutch

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -263,7 +263,7 @@
     },
     "styleguide": {
       "title": "Style guide",
-      "description": "All icons, logos, and colours compiled for you. A must when building a UiT agenda.",
+      "description": "All icons, logos, and colours compiled for you. A must when building a UiT agenda (Dutch only).",
       "img_url": "#",
       "action_title": "Go to style guide",
       "action_url": "#"
