--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -109,7 +109,7 @@
       "email": "E-mailadres"
     },
     "agree": "Ik ga akkoord met de <1>gebruiksvoorwaarden</1> en de <2>privacyverklaring</2>",
-    "terms_of_use_link": "https://www.publiq.be/nl/gebruiksvoorwaarden",
+    "terms_of_use_link": "https://docs.publiq.be/docs/uitdatabank/terms-of-use/terms-of-use",
     "privacy_link": "https://www.publiq.be/nl/privacy",
     "coupon": "Ik heb een coupon",
     "code": "Couponcode",
