--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -109,7 +109,7 @@
       "email": "Email address"
     },
     "agree": "I agree to the <1>terms of use</1> and the <2>privacy policy</2>",
-    "terms_of_use_link": "https://www.publiq.be/en/gebruiksvoorwaarden",
+    "terms_of_use_link": "https://docs.publiq.be/docs/uitdatabank/terms-of-use/terms-of-use",
     "privacy_link": "https://www.publiq.be/en/privacy",
     "coupon": "I have a coupon",
     "code": "Coupon code",
