--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -218,7 +218,7 @@
       "client_id": "Client id",
       "client_secret": "Client secret",
       "api_key": "API Key",
-      "info": "Deze credentials blijven nog 3 maanden geldig en worden definitief verwijderd op {{datum + 3 maanden}}"
+      "info": "Deze credentials blijven nog {{amount}} geldig en worden definitief verwijderd op {{date}}"
     },
     "integration_settings": {
       "title": "Instellingen",
