--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -110,6 +110,7 @@
       "last_name": "Achternaam",
       "email": "E-mailadres"
     },
+    "error": "Niet alle verplichte velden werden correct ingevuld. Controleer je invoer.", 
     "agree": "Ik ga akkoord met de <1>gebruiksvoorwaarden</1> en de <2>privacyverklaring</2>",
     "terms_of_use_link": "https://docs.publiq.be/docs/uitdatabank/terms-of-use/terms-of-use",
     "privacy_link": "https://www.publiq.be/nl/privacy",
