--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -204,6 +204,7 @@
         "postcode": "Postcode",
         "city": "City"
       },
+      "invoiceEmail": "Email address",
       "vat": "VAT or company number",
       "coupon_used": "A coupon of {{price}} has been applied"
     },
