--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -220,7 +220,7 @@
       "live": "Live",
       "status_alert": "Approval from publiq is necessary for the live integration of this project. All information to smoothly go live can be found",
       "link": "here",
-      "uitid_alert": "Client credentials have not yet been requested for this integration.",
+      "uitid_alert": "You can switch to authentication with client credentials. Check here whether this method of authentication is suitable for your application. Once you have requested client credentials, your API key remains valid for another 6 months.",
       "action_status": "Request activation",
       "action_uitid": "Request client credentials",
       "info": "These credentials remain valid for another {{amount}} and will be permanently deleted on {{date}}"
