Edit uitid alert translations

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -219,8 +219,8 @@
       "test": "Test",
       "live": "Live",
       "in_progress": "Je aanvraag tot activatie is in behandeling.",
-      "link": "here",
-      "uitid_alert": "Je kan de overstap maken naar authenticatie met client credentials. Bekijk hier of deze manier van authenticatie geschikt is voor jouw applicatie. Eens je client credentials aangevraagd hebt, blijft je API key nog 6 maanden geldig.",
+      "uitid_alert": "Je kan de overstap maken naar authenticatie met client credentials. Bekijk <0>hier</0> of deze manier van authenticatie geschikt is voor jouw applicatie. Eens je client credentials aangevraagd hebt, blijft je API key nog 6 maanden geldig.",
+      "uitid_alert_link": "https://docs.publiq.be/docs/authentication/methods/overview",
       "action_uitid": "Client credentials aanvragen",
       "client_id": "Client id",
       "client_secret": "Client secret",
