--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -367,7 +367,7 @@
     },
     "newsletter": {
       "title": "Stay informed",
-      "description": "Subscribe to our newsletter and stay up to date with the latest publiq news.",
+      "description": "Subscribe to our newsletter (Dutch) and stay up to date with the latest publiq news.",
       "action": "Subscribe"
     },
     "newsletter_dialog": {
