Add correct link (EN)

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -271,7 +271,7 @@
       "description": "All icons, logos, and colours compiled for you. A must when building a UiT agenda (Dutch only).",
       "img_url": "#",
       "action_title": "Go to style guide",
-      "action_url": "#"
+      "action_url": "https://www.publiq.be/projecten/publiq-platform/beeldmerken-en-verwijzigingen"
     },
     "statuspage": {
       "title": "Status page",
