Add link Responsible Disclosure Policy

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -348,6 +348,10 @@
         "label": "Cookie Policy",
         "link": "https://www.publiq.be/nl/cookies"
       },
+      "responsible_disclosure_policy": {
+        "label":"Responsible Disclosure Policy",
+        "link": "https://www.publiq.be/projecten/publiq-platform/responsible-disclosure-policy"
+      },
       "documentation": {
         "label": "Documentation",
         "link": "https://docs.publiq.be"
